// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  keyboardVerticalOffset={0}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1.5,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "AmaticSC-Bold",
          },
          Object {
            "color": "#ffffff",
            "fontSize": 36,
          },
        ]
      }
    >
      My Step of Faith
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 30,
          "paddingTop": 10,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={true}
      blurOnSubmit={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder=""
      placeholderTextColor="#505256"
      returnKeyType="done"
      selectionColor="#ffffff"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#52C5DC",
            "borderBottomWidth": 1,
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "letterSpacing": 0.25,
            "paddingVertical": 5,
          },
          Object {},
        ]
      }
      underlineColorAndroid="rgba(0,0,0,0)"
      value=""
    />
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "stretch",
          "flex": 1,
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits="button"
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {
              "width": 750,
            },
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Object {},
              ],
            ]
          }
        >
          CREATE STEP
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders edit journey correctly 1`] = `
<View
  keyboardVerticalOffset={0}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1.5,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "AmaticSC-Bold",
          },
          Object {
            "color": "#52C5DC",
            "fontSize": 36,
            "paddingHorizontal": 60,
            "textAlign": "center",
          },
        ]
      }
    >
      Edit your comment
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 30,
          "paddingTop": 10,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={true}
      blurOnSubmit={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder=""
      placeholderTextColor="#505256"
      returnKeyType="done"
      selectionColor="#ffffff"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#52C5DC",
            "borderBottomWidth": 1,
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "letterSpacing": 0.25,
            "paddingVertical": 5,
          },
          Object {},
        ]
      }
      underlineColorAndroid="rgba(0,0,0,0)"
      value="Comment"
    />
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "stretch",
          "flex": 1,
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits="button"
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {
              "width": 750,
            },
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Object {},
              ],
            ]
          }
        >
          SAVE
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders journey correctly 1`] = `
<View
  keyboardVerticalOffset={0}
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
      Object {
        "paddingBottom": 0,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1.5,
          "justifyContent": "center",
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "AmaticSC-Bold",
          },
          Object {
            "color": "#52C5DC",
            "fontSize": 36,
            "paddingHorizontal": 60,
            "textAlign": "center",
          },
        ]
      }
    >
      What did you see God do?
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 30,
          "paddingTop": 10,
        },
        Object {
          "flex": 1,
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      autoFocus={true}
      blurOnSubmit={true}
      multiline={true}
      onChangeText={[Function]}
      placeholder=""
      placeholderTextColor="#505256"
      returnKeyType="done"
      selectionColor="#ffffff"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderBottomColor": "#52C5DC",
            "borderBottomWidth": 1,
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 16,
            "letterSpacing": 0.25,
            "paddingVertical": 5,
          },
          Object {},
        ]
      }
      underlineColorAndroid="rgba(0,0,0,0)"
      value=""
    />
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "stretch",
          "flex": 1,
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits="button"
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#52C5DC",
              "height": 60,
              "justifyContent": "center",
            },
            null,
            Object {
              "width": 750,
            },
            null,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "#ffffff",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "textAlign": "center",
                },
                Object {},
              ],
            ]
          }
        >
          ADD TO OUR JOURNEY
        </Text>
      </View>
    </View>
  </View>
</View>
`;
